--- a/CSCodeChallenges/CSCodeChallenges.csproj
+++ b/CSCodeChallenges/CSCodeChallenges.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <StartupObject>CSCodeChallenges.LongestCollatz</StartupObject>
   </PropertyGroup>
 
 </Project>
